src/objects/clinictrain__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>设备型号</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>traindevice__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AMARIS 1050RS</fullName>
                </value>
                <value>
                    <fullName>AMARIS 750S</fullName>
                </value>
                <value>
                    <fullName>AMARIS</fullName>
                </value>
                <value>
                    <fullName>AMARIS 500E</fullName>
                </value>
                <value>
                    <fullName>P200</fullName>
                </value>
                <value>
                    <fullName>200TX</fullName>
                </value>
                <value>
                    <fullName>Daytona</fullName>
                </value>
                <value>
                    <fullName>VX120</fullName>
                </value>
                <value>
                    <fullName>Keratron Scout</fullName>
                </value>
                <value>
                    <fullName>Sirius</fullName>
                </value>
                <value>
                    <fullName>Combi Workstation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>培训内容</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>trainlevel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>完成实机操作，软件应用及幻灯演示。</fullName>
                </value>
                <value>
                    <fullName>完成实机操作及临床应用注意事项讲解培训</fullName>
                </value>
                <value>
                    <fullName>现场沟通应用情况，解答用户疑问，关注应用效果。必要时进行补充培训</fullName>
                </value>
                <value>
                    <fullName>完成个体化手术设计软件相关应用培训，并进行案例演示。</fullName>
                    <default>true</default>
                    <label>完成个体化手术设计软件相关应用培训，并进行案例演示。</label>
                </value>
                <value>
                    <fullName>完成老视手术设计软件相关应用培训，并进行案例演示。</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>address__c</fullName>
        <formula>customer__r.address__c</formula>
        <label>地址</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户名称</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>临床培训</relationshipLabel>
        <relationshipName>IIw</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>培训日期</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>department__c</fullName>
        <formula>TEXT( person__r.department__c )</formula>
        <label>负责科室</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devicename__c</fullName>
        <formula>unittype__r.Equipmentname__c</formula>
        <label>设备名称</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>landline__c</fullName>
        <formula>person__r.landline__c</formula>
        <label>座机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>联系人</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>临床培训</relationshipLabel>
        <relationshipName>ooAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <formula>person__r.phone__c</formula>
        <label>手机</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postcode__c</fullName>
        <formula>customer__r.postcode__c</formula>
        <label>邮编</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>servicerequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>临床培训</relationshipLabel>
        <relationshipName>OPke</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>servicetype__c</fullName>
        <label>服务类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>集中授课</fullName>
                </value>
                <value>
                    <fullName>个别辅导</fullName>
                </value>
                <value>
                    <fullName>网络培训</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>snnumber__c</fullName>
        <formula>unittype__r.Equipmentunittype__c</formula>
        <label>型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>traindevice__c</fullName>
        <label>培训设备类型</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>准分子</fullName>
                </value>
                <value>
                    <fullName>欧堡</fullName>
                </value>
                <value>
                    <fullName>路视设备</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trainlevel__c</fullName>
        <label>培训级别</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>traindevice__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1A操作培训</fullName>
                </value>
                <value>
                    <fullName>2A初级临床培训</fullName>
                </value>
                <value>
                    <fullName>3A临床回访</fullName>
                </value>
                <value>
                    <fullName>4A个体化培训</fullName>
                </value>
                <value>
                    <fullName>4A老视软件培训</fullName>
                </value>
                <value>
                    <fullName>初级培训</fullName>
                </value>
                <value>
                    <fullName>高级培训</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>trainprincipal__c</fullName>
        <label>培训负责人</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unittype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>临床培训</relationshipLabel>
        <relationshipName>sCiN</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>临床培训</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>date__c</columns>
        <columns>customer__c</columns>
        <columns>trainprincipal__c</columns>
        <columns>department__c</columns>
        <columns>devicename__c</columns>
        <columns>servicetype__c</columns>
        <columns>servicerequest__c</columns>
        <columns>trainlevel__c</columns>
        <columns>traindevice__c</columns>
        <columns>unittype__c</columns>
        <columns>snnumber__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <listViews>
        <fullName>Lasik</fullName>
        <columns>NAME</columns>
        <columns>department__c</columns>
        <columns>devicename__c</columns>
        <columns>servicetype__c</columns>
        <columns>servicerequest__c</columns>
        <columns>customer__c</columns>
        <columns>trainprincipal__c</columns>
        <columns>trainlevel__c</columns>
        <columns>date__c</columns>
        <columns>traindevice__c</columns>
        <columns>unittype__c</columns>
        <columns>snnumber__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>traindevice__c</field>
            <operation>equals</operation>
            <value>准分子</value>
        </filters>
        <label>准分子</label>
    </listViews>
    <listViews>
        <fullName>Myclinictraining</fullName>
        <columns>NAME</columns>
        <columns>department__c</columns>
        <columns>devicename__c</columns>
        <columns>servicetype__c</columns>
        <columns>servicerequest__c</columns>
        <columns>customer__c</columns>
        <columns>trainprincipal__c</columns>
        <columns>trainlevel__c</columns>
        <columns>date__c</columns>
        <columns>traindevice__c</columns>
        <columns>unittype__c</columns>
        <columns>snnumber__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>我的临床培训</label>
    </listViews>
    <listViews>
        <fullName>Oubaou2</fullName>
        <columns>NAME</columns>
        <columns>department__c</columns>
        <columns>devicename__c</columns>
        <columns>servicetype__c</columns>
        <columns>servicerequest__c</columns>
        <columns>customer__c</columns>
        <columns>trainprincipal__c</columns>
        <columns>trainlevel__c</columns>
        <columns>date__c</columns>
        <columns>traindevice__c</columns>
        <columns>unittype__c</columns>
        <columns>snnumber__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>traindevice__c</field>
            <operation>equals</operation>
            <value>欧堡</value>
        </filters>
        <label>欧堡</label>
    </listViews>
    <nameField>
        <displayFormat>LCPX-{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>临床培训编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>临床培训</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>